# wn-dev-std

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  pr-hygiene.yml  release.yml
docs/: architecture.html  build.html  setup.html  test-strategy.html
docs/contracts/: command_manifest.a0.json  command_manifest.a0.schema.json  command_manifest.v0.json  exceptions.schema.v0.json  interface_manifest.v0.json  wn_dev_std_config.schema.v0.json
docs/core/adr/: core-adr-0001-governance-documents.md  core-adr-0002-test-suite-governance-audit.md  core-adr-0003-test-strategy-documents-are-audited.md  core-adr-0004-closeout-test-runtime-review.md  core-adr-0005-cli-governance-scope.md  core-adr-0006-release-mode-artifact-audit.md  core-adr-0007-typescript-first-browser-standard.md  core-adr-0008-rust-application-and-embedded-standard.md
docs/core/design/: cli-governance-audit.html  closeout-test-runtime-impact-audit.html  index.html  release-mode-artifact-audit.html  test-strategy-doc-audit.html  test-suite-governance-audit.html
docs/core/requirements/: core-req-0001-governance-audit.md  core-req-0002-test-suite-governance-audit.md  core-req-0003-test-strategy-doc-audit.md  core-req-0004-closeout-test-runtime-review.md  core-req-0005-cli-governance-audit.md  core-req-0006-release-mode-artifact-audit.md  core-req-0007-greenfield-typescript-guardrails.md  core-req-0008-rust-project-guardrails.md
docs/design/: artifact-vendor-governance.html  audit-standard.html  ci-standard.html  cli-standard.html  cli.html  cpp-standard.html  csharp-standard.html  documentation-standard.html  javascript-standard.html  json-contract-standard.html  mixed-mode.html  python-standard.html  rust-standard.html  typescript-standard.html  zephyr-standard.html
docs/governance/: domain_registry.toml  release.toml
docs/plans/docs-governance-traceability/: plan.md
docs/plans/rack-native-test-audit-adoption/: plan.md
docs/plans/rack-native-test-audit-adoption/logs/: 2026-07-16T111500-0400.md  2026-07-16T112500-0400.md  2026-07-16T113500-0400.md  2026-07-16T114500-0400.md  2026-07-16T115500-0400.md  2026-07-16T120500-0400.md  2026-07-16T121500-0400.md  2026-07-16T123000-0400.md  2026-07-16T124500-0400.md  2026-07-16T130000-0400.md  2026-07-16T131500-0400.md  2026-07-16T132500-0400.md  2026-07-16T133500-0400.md  2026-07-16T134500-0400.md
docs/releases/: 2026-06-04.md  2026-06-07.md  2026-06-09.md  2026-06-10.md  2026-06-12.md  2026-06-14.md  2026-06-22.md  2026-06-27.md  2026-06-28.md  2026-06-29.md  2026-07-01.md  2026-07-02.md  2026-07-12.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  2026-07-18.md
docs/templates/cpp/: .clang-format  .clang-tidy  signoff.toml
docs/templates/zephyr/: .clang-format  .clang-tidy  signoff.toml
src/wn_dev_std/: __init__.py  __main__.py  _version.py  artifact_governance.py  artifact_policy.py  audit_config.py  build_doc_governance.py  check_profiles.py  checks.py  checks_types.py  cli_governance.py  compatibility_pruning.py  config.py  cpp_policy.py  design_doc_status.py  doc_governance.py  domain_governance.py  governance_checks.py  governance_html.py  governance_links.py  governance_markdown.py  governance_mutation.py  json_contracts.py  native_complexity.py  plan_hygiene.py  plan_mutation.py  plan_reader.py  pr_hygiene.py  release_artifacts.py  root_discovery.py  rust_cargo_workspace.py  rust_command_surface.py  rust_policy.py  rust_standard_data.py  rust_standard_profiles.py  secret_hygiene.py  standard_model.py  standards.py  surface_fixtures.py  surface_governance.py  (+7 more)
src/wn_dev_std/assets/: governance.css
src/wn_dev_std/cli/: main.py  types.py
src/wn_dev_std/cli/commands/: __init__.py  adr.py  adr_create.py  adr_list.py  adr_show.py  audit.py  check.py  governance.py  governance_common.py  governance_html.py  governance_list_common.py  governance_resolve.py  governance_show_common.py  governance_text.py  log.py  log_create.py  log_list.py  log_show.py  log_text.py  plan.py  plan_common.py  plan_create.py  plan_list.py  plan_show.py  plan_status.py  plan_step.py  requirement.py  requirement_create.py  requirement_list.py  requirement_show.py  standard.py  text_format.py  version.py
tests/: rack.toml
tests/L0_foundation/: STRATUM.toml  config_fixtures.py  test_L0_001_cli_entrypoint.py  test_L0_002_public_interfaces.py  test_L0_003_plan_hygiene.py  test_L0_004_plan_read_commands.py  test_L0_005_plan_mutation_commands.py  test_L0_006_doc_governance.py  test_L0_007_governance_read_commands.py  test_L0_008_domain_governance.py  test_L0_009_surface_governance.py  test_L0_010_governance_html.py  test_L0_011_governance_links.py  test_L0_011_governance_markdown.py  test_L0_012_governance_mutation_commands.py  test_L0_013_artifact_vendor_governance.py  test_L0_014_build_doc_governance.py  test_L0_015_workspace_governance.py  test_L0_016_test_suite_governance.py  test_L0_017_test_strategy_doc_governance.py  test_L0_018_cli_governance.py  test_L0_019_json_contracts.py  test_L0_020_typescript_policy.py  test_L0_021_rust_policy.py
tests/L99_signoff/: STRATUM.toml  test_L99_001_release_metadata.py  test_L99_002_docs_contracts.py  test_L99_003_quality_tools.py  test_L99_004_repo_hygiene.py  test_L99_005_python_signoff.py
tests/support_scripts/: py_signoff.py
