[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "wn-dev-std"
version = "2026.6.12"
description = "Wavenumber development standards reference package and conformance checks."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Wavenumber LLC" },
]
keywords = [
    "development-standards",
    "testing",
    "packaging",
    "rack",
    "uv",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "wn-rack>=1.1.0",
]

[project.optional-dependencies]
test = [
    "build>=1.2.0",
    "pyright>=1.1.390",
    "pytest>=8.0.0",
    "pytest-json-report>=1.5.0",
    "ruff>=0.8.0",
    "twine>=5.0.0",
]

[dependency-groups]
dev = [
    "build>=1.2.0",
    "pyright>=1.1.390",
    "pytest>=8.0.0",
    "pytest-json-report>=1.5.0",
    "ruff>=0.8.0",
    "twine>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/wavenumber-eng/wn-dev-std"
Repository = "https://github.com/wavenumber-eng/wn-dev-std"
Issues = "https://github.com/wavenumber-eng/wn-dev-std/issues"

[project.scripts]
wn-dev-std = "wn_dev_std.cli.main:main"

[tool.wn_dev_std]
profile = "python-package"
distribution = "none"
languages = ["python"]
strict = true
artifact_policy = "transient-dist"

[tool.uv]
package = true

[tool.hatch.build.targets.sdist]
include = [
    "AGENTS.md",
    "CHANGELOG.md",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    "LICENSE",
    "README.md",
    "SECURITY.md",
    "docs/**",
    "pyproject.toml",
    "src/wn_dev_std/**",
    "tests/**",
]
exclude = [
    "docs/plans/**",
    "docs/research/**",
    "rack_results/**",
    "tests/rack_results/**",
    "tests/**/output/**",
    "**/__pycache__/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wn_dev_std"]

[tool.hatch.version]
path = "src/wn_dev_std/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.pyright]
include = [
    "src/wn_dev_std",
    "tests/L0_foundation",
    "tests/L99_signoff",
    "tests/support_scripts",
]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "D"]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
"src/wn_dev_std/__main__.py" = ["D100"]

[tool.ruff.format]
quote-style = "double"
